--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,21 @@
-<h1>Make your form here</h1>
+<form action="/pirates" method="POST">
+    <label for="pirate[name]">Pirate Name:</label>
+    <input type="text" name="pirate[name]" id="pirate[name]">
+    <label for="pirate[height]">Pirate Height:</label>
+    <input type="text" name="pirate[height]" id="pirate[height]">
+    <label for="pirate[weight]">Pirate Weight:</label>
+    <input type="text" name="pirate[weight]" id="pirate[weight]">
+    <label for="pirate[ships][][name]">Ship Name:</label>
+    <input type="text" name="ship_name_1" id="pirate[ships][][name]">
+    <label for="pirate[ships][][type]">Ship Type:</label>
+    <input type="text" name="ship_type_1" id="pirate[ships][][type]">
+    <label for="pirate[ships][][booty]">Booty:</label>
+    <input type="text" name="ship_booty_1" id="pirate[ships][][booty]">
+    <label for="pirate[ships][][name]">Ship Name:</label>
+    <input type="text" name="ship_name_2" id="pirate[ships][][name]">
+    <label for="pirate[ships][][type]">Ship Type:</label>
+    <input type="text" name="ship_type_2" id="pirate[ships][][type]">
+    <label for="pirate[ships][][booty]">Booty:</label>
+    <input type="text" name="ship_booty_2" id="pirate[ships][][booty]">
+    <input type="submit" id="Submit">
+</form>
