--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,36 @@
-<h1>Make your form here</h1>
+<h1>New Pirate Ship</h1>
+<form action="/pirates" method="POST">
+    <label for="name">Pirate Name: </label>
+    <input type="text" name="pirate[name]" id="name"><br>
+    
+    <label for="weight">Pirate Weight: </label>
+    <input type="text" name="pirate[weight]" id="weight"><br>
+    
+    <label for="height">Pirate Height: </label>
+    <input type="text" name="pirate[height]" id="height"><br>
+    
+    <label for="name">Ship Name 1: </label>
+    <input type="text" name="pirate[ships][][name]" id="ship_name_1"><br>
+    
+    <label for="type">Ship Type 1: </label>
+    <input type="text" name="pirate[ships][][type]" id="ship_type_1"><br>
+    
+    <label for="booty">Ship Booty 1: </label>
+    <input type="text" name="pirate[ships][][booty]" id="ship_booty_1"><br>
+
+    <label for="name">Ship Name 2: </label>
+    <input type="text" name="pirate[ships][][name]" id="ship_name_2"><br>
+    
+    <label for="type">Ship Type 2: </label>
+    <input type="text" name="pirate[ships][][type]" id="ship_type_2"><br>
+    
+    <label for="booty">Ship Booty 2: </label>
+    <input type="text" name="pirate[ships][][booty]" id="ship_booty_2"><br>
+
+    <input type="submit" name="Submit" id="Submit">
+</form>
+
+
+
+
+
