--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,13 @@
-<h1>Display your Pirate here</h1>
+<h1>Display your Pirate here</h1> <br>
+<%= "#{@pirate_name}" %> <br>
+<%= "#{@pirate_weight}" %> <br>
+<%= "#{@pirate_height}" %> <br>
 
-
-<h2>Display your first ship here</h2>
-
-
-<h2>Display your second ship here</h2>
+<h2>Display your first ship here</h2> <br>
+<%= "#{@ship_name}" %> <br>
+<%= "#{@ship_type}" %> <br>
+<%= "#{@ship_booty}" %> <br>
+<h2>Display your second ship here</h2> <br>
+<%= "#{@ship_name2}" %> <br>
+<%= "#{@ship_type2}" %> <br>
+<%= "#{@ship_booty2}" %> <br>
