--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,22 @@
 <h1>Display your Pirate here</h1>
+ 
+<div class="pirate">
+  Name: <%= @pirate.name %>
+  Weight: <%= @pirate.weight %>
+  Height: <%= @pirate.height %>
+</div>
 
 
 <h2>Display your first ship here</h2>
-
+  <div class="course">
+    Name: <%= @ships[0].name %>
+    Type: <%= @ships[0].type %>
+    Booty: <%= @ships[0].booty %>
+  </div>
 
 <h2>Display your second ship here</h2>
+<div class="course">
+Name: <%= @ships[1].name %>
+Type: <%= @ships[1].type %>
+Booty: <%= @ships[1].booty %>
+</div>
