--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,17 @@
 <h1>Display your Pirate here</h1>
 
+    <div class="pirate"> 
+        <h3> Name: <%= "#{@pirate.name}" %> </h3><br>
+        <h3> Weight: <%= "#{@pirate.weight}" %> </h3><br>
+        <h3> Height: <%= "#{@pirate.height}" %> </h3><br>
+    </div><br> 
 
 <h2>Display your first ship here</h2>
-
+        <h3> Name: <%= "#{@ship1.name}" %> </h3><br>
+        <h3> Type: <%= "#{@ship1.type}" %> </h3><br>
+        <h3> Booty: <%= "#{@ship1.booty}" %> </h3><br>
 
 <h2>Display your second ship here</h2>
+        <h3> Name: <%= "#{@ship2.name}" %> </h3><br>
+        <h3> Weight: <%= "#{@ship2.type}" %> </h3><br>
+        <h3> Booty: <%= "#{@ship2.booty}" %> </h3><br>
